# libnmea

./: .gitmodules  CMakeLists.txt  README.md  gps.h  nmea.cxx  nmea.h
gtests/: CMakeLists.txt  nmeaGtests.cxx
